--- a/public/index.html
+++ b/public/index.html
@@ -2,44 +2,21 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - To-do List with animated interactions</title>
+  <title>CodePen - A Pen by designcourse</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-  <title>My Todo-ist</title>
-</head>
-
-<body>
-  <div class="wrapper">
-    <header>
-      <input type="text" autofocus placeholder="Enter a task..." id="item">
-      <div id='animationDiv'><button id="add">
-                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve"><g><path class="fill" d="M16,8c0,0.5-0.5,1-1,1H9v6c0,0.5-0.5,1-1,1s-1-0.5-1-1V9H1C0.5,9,0,8.5,0,8s0.5-1,1-1h6V1c0-0.5,0.5-1,1-1s1,0.5,1,1v6h6C15.5,7,16,7.5,16,8z"/></g></svg>
-            </button></div>
-    </header>
-    <div class="container">
-      <ul class="todo" id="todo">
-
-      </ul>
-      <hr class="divider">
-      <ul class="todo" id="completed">
-
-      </ul>
+<div class="container">
+        <canvas id="canvas" width="700" height="700"></canvas>
+        <div class="content">
+            <a href="#">Upload Now</a>
+        </div>
+        <p></p>
     </div>
-  </div>
-  <script src="https://cdn.jsdelivr.net/mojs/latest/mo.min.js"></script>
-  <script src="resources/js/main.js"></script>
-
-</body>
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script src='https://unpkg.com/rive-js'></script><script  src="./script.js"></script>
 
 </body>
 </html>
